# terminal_defense

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  constants.h  coord.cpp  coord.hpp  damage.cpp  damage.hpp  definitions  game.cpp  game.hpp  gui.cpp  gui.hpp  gui_mock.cpp  guitest.cpp  main.cpp  main.hpp  manager.hpp  menu.cpp  menu.hpp  ncursestest.cpp  path.hpp  player.cpp  player.hpp  tower.cpp  tower.hpp  virus.hpp  wall.cpp
application/: CMakeLists.txt  Main.cpp
archive/: Tower.cpp
include/: Constants.h  Coordinate.h  Damage.h  Game.h  GameBoard.h  Gui.h  Menu.h  Player.h  Version.h
info/: README.md  maps.info  projectile.info  tower.info  virus.info
maps/: gameboard.cpp  gameboard.hpp  virusmanager.hpp  wave.cpp  wave.hpp  waveloader.cpp  waveloader.hpp
source/: CMakeLists.txt  Coordinate.cpp  Damage.cpp  Game.cpp  GameBoard.cpp  Gui.cpp  Menu.cpp  Player.cpp
source/info/: tower.info  virus.info
source/info/map1/: gameboard.info
source/logging/: Logger.cpp  logger.cpp
source/tower/: HomingTower.cpp  RightTower.cpp  TowerManager.cpp  Wall.cpp
source/tower/projectile/: DirectionProjectile.cpp  DirectionProjectile.cpp.x  HomingProjectile.cpp.x  Projectile.cpp.x  ProjectileManager.cpp  ProjectileManager.cpp.x
source/virus/: Path.cpp  Virus.cpp  VirusManager.cpp  WaveManager.cpp
source/virus/wave/: WaveInfo.cpp  WaveLoader.cpp
test/: guitest.cpp
tower/: basic_tower_1x1.cpp  basic_tower_1x1.hpp  direction_tower_1x1.cpp  direction_tower_1x1.hpp  projectile.cpp  projectile.hpp  right_tower_1x1.cpp  right_tower_1x1.hpp  (+13 more)
(+55 files in other folders)
